Fixing removing the rules

--- a/Hub/Tools/EnvironmentMonitor/HomeEditor.html
+++ b/Hub/Tools/EnvironmentMonitor/HomeEditor.html
@@ -148,7 +148,9 @@
         }
 
         function RemoveRule(id) {
-            new PlatformServiceHelper().MakeServiceCall("webapp/RemoveRuleWeb", 'ok', EmptyCallback);
+            var parameters = '{"id":"' + id + '"}';
+            new PlatformServiceHelper().MakeServiceCall("webapp/RemoveRuleWeb", parameters, EmptyCallback);
+            PresentRules();
         }
 
         function FillRulesCallback(context, result) {
