Menu displaying changed

--- a/Hub/Tools/EnvironmentMonitor/HomeEditor.html
+++ b/Hub/Tools/EnvironmentMonitor/HomeEditor.html
@@ -14,7 +14,32 @@
   <link rel="stylesheet" media="all" type="text/css" href="Styles/HomeOSMasterStyleSheet.css" />
     <meta charset="utf-8" />
     <title></title>
+    <style>
+        ul {
+    list-style-type: none;
+    margin: 2px;
+    padding: 2px;
+    width: 400px;
+    background-color: lightslategray;
+}
 
+li {
+    display: inline;
+}
+li a {
+    display: inline;
+    color: white;
+    padding: 8px 0 8px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+    background-color: #555;
+    color: lightblue;
+}
+
+    </style>
     <script>
         $(document).ready(function () {
             Init();
@@ -168,6 +193,7 @@
         }
 
     </script>
+    
 
 </head>
     <body>
