--- a/Hub/Tools/EnvironmentMonitor/HomeEditor.html
+++ b/Hub/Tools/EnvironmentMonitor/HomeEditor.html
@@ -175,7 +175,7 @@
     <body>
         <div ng-app="APP" ng-controller="APP.ApplicationCtrl" ng-model="name">
             <!--<h1>Hello {{ name }}!</h1>-->
-            <div><h2>Home Environment -> </h2></div>
+            <div><h3>SMART HOME configuration:</h3></div>
             <section>
                 <nav>
                     <ul>
